--- a/src/main/resources/templates/vistas/ListadoProductos.html
+++ b/src/main/resources/templates/vistas/ListadoProductos.html
@@ -1,57 +1,50 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	
-	<head>
-		<title>Listado de productos</title>
-		<style>
-			html{
-				background-color: #c5dec9;
-			}
-		</style>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-
-	</head>
-	<body>
-		<h1 style="text-align: center;">Listado de productos</h1>
-		<h2  style="text-align: center;">
-			<a th:href="@{RegistrarProducto}" th:text="'nuevo registro'" 
-		title="crear un nuevo registro" class="btn btn-primary"></a>
-		</h2>
-		<table align="center" border="2">
-		<tr>
-			<th>Codigo</th>
-			<th>Producto</th>
-			<th>Precio</th>
-			<th>Cantidad</th>
-			<th>Total</th>
-			<th>Cod. Barras</th>
-			<th>Nro. Lote</th>
-			<th>fecha venc.</th>
-			<th>Acciones</th>
-		</tr>
-		<th:block th:each="p:${listadoProducto}">
-			<tr>
-				<td th:text="${p.idProducto}"></td>
-				<td th:text="${p.nombreProducto}"></td>
-				<td th:text="${p.precio}"></td>
-				<td th:text="${p.cantidad}"></td>
-				<td th:text="${p.total}"></td>
-				
-				<td th:text="${p.nroLote}"></td>
-				<td th:text="${#dates.format(p.fechaVenta,'dd-MM-yyy')}"></td>
-				<td>
-					<a th:href="@{editarproducto/}+${p.idproducto}" 
-					th:text="Editar" title="Editar Registro" class="btn btn-primary">				
-					</a>
-				</td>
-				<td>
-					<a th:href="@{eliminarproducto/}+${p.idproducto}" 
-					th:text="Eliminar" title="Eliminar Registro" class="btn btn-warning">	
-					</a>
-				</td>		
-			</tr>
-		</th:block>
-
-			</table>
-	</body>
+<head>
+	<title>Listado de productos</title>	
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+</head>
+	<body class="text-center">
+		<h1 >Listado de productos</h1>
+		
+		<div style="width: 50%; margin: 0 auto;" >
+			<table class="table table-dark">
+						<tr>
+							<th scope="col">Codigo</th>
+							<th scope="col">Producto</th>
+							<th scope="col">Precio</th>
+							<th scope="col">Cantidad</th>
+							<th scope="col">Total</th>
+							<th scope="col">Cod. Barras</th>
+							<th scope="col">Nro. Lote</th>
+							<th scope="col">fecha venc.</th>
+							<th scope="col">Acciones</th>
+						</tr>
+						<th:block th:each="p:${listadoProducto}">
+						<tr>
+							<td scope="row" th:text="${p.idProducto}"></td>
+							<td scope="row" th:text="${p.nombreProducto}"></td>
+							<td scope="row" th:text="${p.precio}"></td>
+							<td scope="row" th:text="${p.cantidad}"></td>
+							<td scope="row" th:text="${p.total}"></td>
+							<td scope="row" th:text="${p.codigoBarras}"></td>
+							<td scope="row" th:text="${p.nroLote}"></td>
+							<td scope="row" th:text="${#dates.format(p.fechaVenta,'dd-MM-yyy')}"></td>
+							<td>
+								<a th:href="@{editarProducto/}+${p.idProducto}"th:text="Editar" title="	Editar Registro" class="btn btn-primary">			
+								</a>
+								<a th:href="@{eliminarproducto/}+${p.idProducto}"th:text="Eliminar" title="Eliminar Registro" class="btn btn-warning">	
+								</a>
+							</td>		
+						</tr>
+						</th:block>
+				</table>	
+				<h2  style="text-align: center;">
+							<a th:href="@{registrarProducto}" th:text="'Nuevo registro'" 
+						title="crear un nuevo registro" class="btn btn-primary"></a>
+				</h2>
+		</div>
+		
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+	</body>	
 </html>
