--- a/src/main/resources/templates/vistas/EditarProducto.html
+++ b/src/main/resources/templates/vistas/EditarProducto.html
@@ -10,24 +10,24 @@
 	<div class="container mt-5">
 	        <div class="row justify-content-center">
 	            <div class="col-md-6"> <!-- Ancho del formulario -->
-	                <form th:action="@{/vistas/registrarProducto}" class="form-group" method="post" th:object="${producto}" th:each="p:{productoEditar}">
+	                <form th:action="@{/vistas/editarProducto}" class="form-group" method="post" th:object="${productoEditar}">
 	                    <label>Nombre del producto</label>
-	                    <input type="text" class="form-control" th:field="*{nombreProducto}" value="${p.nombreProducto}" required>
+	                    <input type="text" class="form-control" th:field="*{nombreProducto}"required>
 	                    
 	                    <label>Cantidad</label>
-	                    <input type="number" class="form-control" th:field="*{cantidad}" value="${p.cantidad}" required>
+	                    <input type="number" class="form-control" th:field="*{cantidad}"  required>
 	                    
 	                    <label>Precio</label>
-	                    <input type="number" step="0.01" class="form-control" th:field="*{precio}"  value="${p.precio}" required>
+	                    <input type="number" step="0.01" class="form-control" th:field="*{precio}" required>
 	                    
 	                    <label>Numero de Lote</label>
-	                    <input type="number" class="form-control" th:field="*{nroLote}" value="${p.nroLote}" required>
+	                    <input type="number" class="form-control" th:field="*{nroLote}" required>
 	                    
 	                    <label>Fecha de venta</label>
-	                    <input type="date" class="form-control" th:field="*{fechaVenta}" value="${#dates.format(p.fechaVenta,'dd-MM-yyy')}" required>
+	                    <input type="date" class="form-control" th:field="*{fechaVenta}" required>
 	                    
 	                    <label>Codigo de Barras</label>
-	                    <input type="number" class="form-control" th:field="*{codigoBarras}" value="${p.codigoBarras}" required>
+	                    <input type="number" class="form-control" th:field="*{codigoBarras}" required>
 	                    
 	                    <div class="mt-3">
 	                        <button type="submit" class="btn btn-primary">Guardar</button>
