--- a/src/main/resources/templates/vistas/EditarProducto.html
+++ b/src/main/resources/templates/vistas/EditarProducto.html
@@ -11,6 +11,7 @@
 	        <div class="row justify-content-center">
 	            <div class="col-md-6"> <!-- Ancho del formulario -->
 	                <form th:action="@{/vistas/editarProducto}" class="form-group" method="post" th:object="${productoEditar}">
+						<input hidden="hidden" th:field="*{idProducto}">
 	                    <label>Nombre del producto</label>
 	                    <input type="text" class="form-control" th:field="*{nombreProducto}"required>
 	                    
